# jigsaw-toxic-comment-classification-challenge

./: .gitignore  README.md  pyproject.toml
src/: generate_embeds_dataset.py  inference_all_minilm_l6.py  inference_text_embedding_004.py  model_conversion.py  onnx_model_conversion.py  toxicity_dataset.py  toxicity_training.py  train_all_minilm_l6.py  train_text_embedding_004.py
src/all_minilm_l6/: generate_embeds_dataset.py  toxicity_model.py
src/text_embedding_004/: generate_embeds_dataset.py  toxicity_model.py
web_onnx/: index.html  package-lock.json  package.json  vite.config.js
web_onnx/public/: SP-all-MiniLM-L6-v2.onnx
web_onnx/src/: main.js
web_tflite/: index.html  package-lock.json  package.json  vite.config.js
web_tflite/public/: SP-all-MiniLM-L6-v2.tflite
web_tflite/src/: main.js
